--- a/DMH/assets/css/style.css
+++ b/DMH/assets/css/style.css
@@ -76,25 +76,59 @@ h6 {
   transition: all 0.5s;
   background: #fff;
   box-shadow: 0px 2px 15px rgba(0, 0, 0, 0.1);
+  align-items: left;
 }
 
 #header .logo h1 {
   font-size: 28px;
-  margin: 0;
-  font-weight: 600;
+  margin: 5px 20px;
+  padding: 10px 18px;
+  /* font-family: 'Noto Serif', serif; */
+  font-weight: 800;
+  /* border: 3px solid #3498db; */
   letter-spacing: 1px;
   text-transform: uppercase;
   color: #384046;
+}
+#header .logo {
+  /* border: 2px solid black; */
+  color: white;
+  text-align: center;
+  /* padding: 8px 16px; */
+  line-height: 1;
+  display: flex;
+  flex-direction: row;
+  
 }
 
 #header .logo h1 a,
 #header .logo h1 a:hover {
   color: #384046;
   text-decoration: none;
+  
 }
-
+.img-a{
+  display: flex;
+  flex-direction: column;
+  justify-content: center !important;
+  align-items: center;
+}
 #header .logo img {
   max-height: 40px;
+  padding: 5px 5px;
+  margin: auto 10px;
+}
+
+@media (max-width:520px){
+  #header .logo h1 {
+  visibility: hidden;
+  
+  }
+  #header .logo img {
+    max-height: 55px;
+    padding: 5px 5px;
+    margin: auto 10px;
+  }
 }
 
 /*--------------------------------------------------------------
@@ -134,6 +168,7 @@ h6 {
 */
 .navbar {
   padding: 0;
+
 }
 
 .navbar ul {
