--- a/DMH/assets/css/style.css
+++ b/DMH/assets/css/style.css
@@ -121,11 +121,13 @@ h6 {
 
 @media (max-width:520px){
   #header .logo h1 {
-  visibility: hidden;
+    font-size: 14px;
+  /* visibility: hidden; */
   
   }
   #header .logo img {
-    max-height: 55px;
+    max-height: 60px;
+    width: 60px;
     padding: 5px 5px;
     margin: auto 10px;
   }
