added leaflet map below contact

--- a/DMH/assets/css/style.css
+++ b/DMH/assets/css/style.css
@@ -1250,6 +1250,13 @@ section {
   }
 }
 
+/* leaflet map */
+#map{
+
+  width: 100%;
+  height: 300px;
+}
+
 /*--------------------------------------------------------------
 # Breadcrumbs
 --------------------------------------------------------------*/
