--- a/DMH/assets/css/style.css
+++ b/DMH/assets/css/style.css
@@ -985,11 +985,16 @@ section {
 .portfolio-details .portfolio-description p {
   padding: 0;
 }
+.product-image img{
+  /* border: 2px solid black; */
+  width:100%;
+  height: 100%;
+}
 
 /*--------------------------------------------------------------
 # Testimonials
 --------------------------------------------------------------*/
-.testimonials .testimonials-carousel,
+/* .testimonials .testimonials-carousel,
 .testimonials .testimonials-slider {
   overflow: hidden;
 }
@@ -1063,7 +1068,7 @@ section {
 
 .testimonials .swiper-pagination .swiper-pagination-bullet-active {
   background-color: #3498db;
-}
+} */
 
 /*--------------------------------------------------------------
 # Team
