updated product catagoery top styling

--- a/DMH/assets/css/style.css
+++ b/DMH/assets/css/style.css
@@ -778,6 +778,17 @@ section {
   margin: 0 0 35px 0;
   list-style: none;
   text-align: center;
+  
+}
+@media (max-width:768px){
+  .portfolio #portfolio-flters{
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0 0 35px 0;
+    list-style: none;
+    text-align: center;
+  }
 }
 
 .portfolio #portfolio-flters li {
