--- a/DMH/assets/css/style.css
+++ b/DMH/assets/css/style.css
@@ -123,12 +123,17 @@ h6 {
 @media (max-width:520px){
   #header .logo h1 {
     font-size: 14px;
+    margin: 15px auto;
+    /* padding: 10px 18px; */
+    
   /* visibility: hidden; */
-  
+  }
+  #header .logo{
+    width: 100%;
   }
   #header .logo img {
     max-height: 60px;
-    width: 60px;
+    width: 55px;
     padding: 5px 5px;
     margin: auto 10px;
   }
