--- a/DMH/assets/css/style.css
+++ b/DMH/assets/css/style.css
@@ -128,9 +128,9 @@ h6 {
     
   /* visibility: hidden; */
   }
-  #header .logo{
+  /* #header .logo{
     width: 100%;
-  }
+  } */
   #header .logo img {
     max-height: 60px;
     width: 55px;
