--- a/DMH/assets/css/style.css
+++ b/DMH/assets/css/style.css
@@ -124,7 +124,7 @@ h6 {
   #header .logo h1 {
     font-size: 14px;
     margin: 15px auto;
-    /* padding: 10px 18px; */
+    padding: 10px 18px;
     
   /* visibility: hidden; */
   }
