Changes in email body , message notification, product pages completed and social links removed.

--- a/DMH/assets/css/style.css
+++ b/DMH/assets/css/style.css
@@ -1197,7 +1197,7 @@ section {
   font-size: 13px;
 }
 
-.contact .php-email-form .error-message {
+/* .contact .php-email-form .error-message {
   display: none;
   color: #fff;
   background: #ed3c0d;
@@ -1208,7 +1208,7 @@ section {
 
 .contact .php-email-form .error-message br+br {
   margin-top: 25px;
-}
+} */
 
 .contact .php-email-form .sent-message {
   display: none;
@@ -1218,7 +1218,14 @@ section {
   padding: 15px;
   font-weight: 600;
 }
-
+.contact .php-email-form .sent-message1 {
+  display: none;
+  color: #fff;
+  background: #18d26e;
+  text-align: center;
+  padding: 15px;
+  font-weight: 600;
+}
 .contact .php-email-form .loading {
   display: none;
   background: #fff;
